--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-	"cover": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*"
+    "test": "jest --coverage"
   },
+"jest":{
+	"testEnvironment" : "node",
+	"collectCoverageFrom" : [
+	"*.js"
+]
+},
   "author": "",
   "license": "ISC",
   "dependencies": {},
