--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-./node_modules
-./.idea
-./.git
-./README.md
-./package.json
-./.gitignore
+node_modules/
+coverage/
+.idea/
+.git/
+README.md
+.gitignore
