--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
     "test": "jest --coverage"
   },
 "jest":{
-	"testEnvironment" : "node",
-	"collectCoverageFrom" : [
-	"*.js"
-]
+	"testEnvironment" : "node"
 },
   "author": "",
   "license": "ISC",
