--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "module_npm_temporary",
-  "version": "1.0.2",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "cover": "jest --coverage"
+    "test": "jest --coverage",
+	"cover": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*"
   },
-  "jest": {
-    "testEnvironment": "node"
-  },
+"jest":{
+	"testEnvironment" : "node",
+	"collectCoverageFrom" : [
+	"*.js"
+]
+},
   "author": "",
   "license": "ISC",
   "dependencies": {},
